# process_consistency

./: Cargo.toml  README.md
src/: error.rs  lib.rs
src/linux/: mod.rs
src/windows/: mod.rs
