[package]
name = "processconsistency"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
crc64fast = { version = "1.0", optional = true }
blake3 = { version = "1.3.1", optional = true, default-features = false }

[dependencies.windows]
version = "0.39.0"
features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_ToolHelp",
]

[features]
default = ["blake3"]
crc64 = ["crc64fast"]
