[package]
name = "process_consistency"
version = "0.5.0"
edition = "2021"
authors = ["Jannis Froese <jannisfroese@mailbox.org>"]
license = "MIT OR Apache-2.0"

description = "Hash your executable memory to ensure it stays the same"
readme = "README.md"
documentation = "https://docs.rs/process_consistency"

categories = ["memory-management", "os"]
keywords = ["bit", "flip", "detect", "memory", "modification"]
repository = "https://github.com/leofidus/process_consistency"

[features]
default = ["blake3"]
blake3 = ["dep:blake3"]
crc64 = ["crc64fast"]


[dependencies]
thiserror = "1.0"
crc64fast = { version = "1.0", optional = true }
blake3 = { version = "1.3.1", optional = true, default-features = false }

[dependencies.windows]
version = "0.39.0"
features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_ToolHelp",
]
